--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,15 @@
 build
-QLMarkdown-*.zip
-QLMarkdown/*
+QuickLookAddict*.zip
 *.xcodeproj/*.pbxuser
 *.xcodeproj/*.mode1v3
 *.xcodeproj/*.mode2v3
 
-# xcode noise
+# Xcode noise
 *.pbxuser
-*.mode1v3
-# AppCode metadata
-.idea
-
-# Xcode 4 user noise
 *.xcworkspace
-xcuserdata
-*.perspectivev3
 
-# OSX noise
+xcuserdata
+
+# OS X noise
 ._*
 .DS_Store
