--- a/QuickLookAddict/Info.plist
+++ b/QuickLookAddict/Info.plist
@@ -32,9 +32,9 @@
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.2</string>
+	<string>1.3.0</string>
 	<key>CFBundleVersion</key>
-	<string>1.2.2</string>
+	<string>1.3.0</string>
 	<key>CFPlugInDynamicRegisterFunction</key>
 	<string></string>
 	<key>CFPlugInDynamicRegistration</key>
@@ -54,16 +54,16 @@
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017-2019 Théo Attali. All rights reserved.</string>
+	<string>Copyright © 2017-2020 Théo Attali. All rights reserved.</string>
 	<key>QLNeedsToBeRunInMainThread</key>
 	<true/>
 	<key>QLPreviewHeight</key>
-	<real>600</real>
+	<integer>600</integer>
 	<key>QLPreviewWidth</key>
 	<real>800</real>
 	<key>QLSupportsConcurrentRequests</key>
 	<true/>
 	<key>QLThumbnailMinimumSize</key>
-	<real>17</real>
+	<integer>17</integer>
 </dict>
 </plist>
